--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div style="background-image: url('DSC01320.jpg')" class="vh-100 w-100 cover flex flex-column items-center justify-center">
         <img src="Jason IN Photo-2.jpg" style="width: 12.5%" class="br-100 mb3 ba bw3 b--near-white" />
 
-        <a class="f3 grow no-underline br-pill ba bw2 ph3 pv2 mb2 dib bg-black-80 near-white avenir shadow-5" href="JP_F19_Resume.pdf">Résumé</a>
+        <a class="f3 grow no-underline br-pill ba bw2 ph3 pv2 mb2 dib bg-black-80 near-white avenir shadow-5" href="JP_F19_Resume_Updated.pdf">Résumé</a>
     </div>
 </body>
 </html>
